login page & home page layout setup

--- a/Connect4/src/app/app.component.html
+++ b/Connect4/src/app/app.component.html
@@ -1,1 +1,12 @@
-<app-login></app-login>
+<div class="body">
+    <h1>Connect 4</h1>
+    <div class="main-container">
+        <router-outlet></router-outlet>
+    </div>
+    <div class="footer-container">
+        <div class="footer">
+            <hr>
+            <p>Footer ©</p>
+        </div>
+    </div>
+</div>
