--- a/Connect4/src/app/login/login.component.html
+++ b/Connect4/src/app/login/login.component.html
@@ -1,8 +1,8 @@
-
-
-<label>Username</label>
-<input type="text">
-<label>Password</label>
-<input type="text">
-
-<button>Login</button>
+<div class="login-container">
+    <p>Username</p>
+    <input type="text" />
+    <p>Password</p>
+    <input type="text" />
+    <br>
+    <input (click)="signIn()" type="button" value="Sign in">
+</div>
