--- a/Connect4/src/app/home/home.component.html
+++ b/Connect4/src/app/home/home.component.html
@@ -1,1 +1,25 @@
-<p>home works!</p>
+<div class="home-container">
+    <div class="left">
+        <div class="container profile-container">
+            <div class="profile-img">
+                <img src="assets/no-profile-image.png" alt="">
+            </div>
+            <div class="user-info">
+                <p class="username">Jussi995</p>
+                <p class="record">14 - 2 - 8</p>
+            </div>
+        </div>
+        <div class="container search-game-container">
+            <select>
+                <option>Red</option>
+                <option>Yellow</option>
+            </select>
+            <button (click)="searchGame()">Search game</button>
+        </div>
+    </div>
+    <div class="right">
+        <div class="container last-game-container">
+            <img src="assets/last-game.jpg" alt="">
+        </div>
+    </div>
+</div>
