--- a/Connect4/src/app/home/home.component.scss
+++ b/Connect4/src/app/home/home.component.scss
@@ -3,64 +3,55 @@
   border-radius: 20px;
   padding: 5%;
   margin: 2%;
+  box-shadow: 5px 5px;
 }
 
 .home-container {
   display: flex;
-  width: 70%;
+  width: 50%;
   margin: auto;
-  border: 5px solid #cfe8ff;
-  border-radius: 33px;
 
-  .left {
+  .profile-container {
+    display: flex;
     width: 100%;
 
-    .profile-container {
-      display: flex;
-
-      .profile-img {
-        img {
-          width: 100px;
-          height: 100px;
-        }
-      }
-
-      .user-info {
-        margin: auto;
-        width: 100%;
-        margin-left: 10%;
-
-        .username {
-          font-size: xx-large;
-          margin-bottom: 2%;
-        }
-
-        .record {
-          font-size: large;
-          opacity: 0.5;
-        }
+    .profile-img {
+      img {
+        width: 10em;
+        height: 10em;
       }
     }
 
-    .search-game-container {
-      select,
-      button {
-        font-size: x-large;
-        // padding: 3% 0;
-        border-radius: 5px;
-        width: 100%;
+    .user-info {
+      margin: auto;
+      width: 100%;
+      margin-left: 10%;
+
+      .username {
+        font-size: xx-large;
+        margin-bottom: 2%;
+      }
+
+      .record {
+        font-size: large;
+        opacity: 0.5;
       }
     }
   }
 
-  .right {
+  .search-game-container {
     width: 100%;
+    
+    select,
+    button {
+      font-size: x-large;
+      padding: 3% 0;
+      border-radius: 5px;
+      width: 100%;
+    }
 
-    .last-game-container {
-      img {
-        width: 300px;
-        height: 300px;
-      }
+    select {
+      margin-bottom: 8%;
     }
   }
 }
