Added loading screen, fixed the logo and added some hover and click effects

--- a/Connect4/src/app/app.component.html
+++ b/Connect4/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="body">
-    <h1>Connect 4</h1>
+    <div class="title-container">
+        <p class="container ">Connect 4</p>
+    </div>
     <div class="main-container">
         <router-outlet></router-outlet>
     </div>
