--- a/Connect4/src/app/login/login.component.html
+++ b/Connect4/src/app/login/login.component.html
@@ -1,8 +1,8 @@
-<div class="login-container">
+<div class="container login-container">
     <p>Username</p>
     <input type="text" />
     <p>Password</p>
     <input type="text" />
     <br>
-    <input (click)="signIn()" type="button" value="Sign in">
+    <input class="button" (click)="signIn()" type="button" value="Sign in">
 </div>
