--- a/Connect4/src/app/app.component.scss
+++ b/Connect4/src/app/app.component.scss
@@ -3,6 +3,19 @@
   width: 100%;
   height: 100%;
 
+  .title-container{
+    padding-top: 2%;
+    margin-bottom: 5%;
+
+    p{
+      font-size: 3em;
+      margin: auto;
+      width: fit-content;
+      text-align: center;
+      padding: 1% 2%;
+    }
+  }
+
   .main-container {
     justify-content: center;
     align-items: center;
