--- a/Connect4/src/app/home/home.component.html
+++ b/Connect4/src/app/home/home.component.html
@@ -14,6 +14,6 @@
             <option>Red</option>
             <option>Yellow</option>
         </select>
-        <button (click)="searchGame()">Search game</button>
+        <button class="button" (click)="searchGame()">Search game</button>
     </div>
 </div>
