--- a/Connect4/src/app/app.component.scss
+++ b/Connect4/src/app/app.component.scss
@@ -3,16 +3,23 @@
   width: 100%;
   height: 100%;
 
-  .title-container{
+  .title-container {
     padding-top: 2%;
     margin-bottom: 5%;
 
-    p{
+    p {
       font-size: 3em;
       margin: auto;
       width: fit-content;
       text-align: center;
       padding: 1% 2%;
+
+      color: white;
+      text-shadow: 
+      -1px -1px 1px #000, 
+       1px -1px 1px #000,
+      -1px  1px 1px #000,
+       1px  1px 1px #000;
     }
   }
 
