--- a/Connect4/src/app/game/game.component.html
+++ b/Connect4/src/app/game/game.component.html
@@ -1,1 +1,25 @@
-<p>game works!</p>
+<div class="game-container">
+    <div class="container player-container">
+        <div class="profile">
+            <img src="assets/no-profile-image.png" alt="">
+            <p>Jussi995</p>
+        </div>
+        <div class="disc-count-container">
+            <img src="assets/red-disc.png" alt="">
+            <p> x 21</p>
+        </div>
+    </div>
+    <div class="container canvas-container">
+        <canvas #canvas></canvas>
+    </div>
+    <div class="container player-container">
+        <div class="profile">
+            <img src="assets/no-profile-image.png" alt="">
+            <p>Jussi995</p>
+        </div>
+        <div class="disc-count-container">
+            <img src="assets/yellow-disc.png" alt="">
+            <p> x 21</p>
+        </div>
+    </div>
+</div>
