Added play as guest link

--- a/Connect4/src/app/login/login.component.html
+++ b/Connect4/src/app/login/login.component.html
@@ -5,4 +5,6 @@
     <input type="text" />
     <br>
     <input class="button" (click)="signIn()" type="button" value="Sign in">
+    <br>
+    <a class="link" (click)="signIn()">Or play as guest</a>
 </div>
