--- a/Connect4/src/app/login/login.component.scss
+++ b/Connect4/src/app/login/login.component.scss
@@ -16,4 +16,13 @@
     border-radius: 5px;
     width: 100%;
   }
+
+  .link{
+    color: blue;
+    text-decoration: underline;
+  }
+
+  .link:hover{
+    cursor: pointer;
+  }
 }
