Can now place disc and receive & show placement on clients canvas

--- a/Connect4/src/app/loading/loading.component.html
+++ b/Connect4/src/app/loading/loading.component.html
@@ -1,4 +1,4 @@
-<div (click)="foundGame()" class="loading-screen-container">
+<div class="loading-screen-container">
     <img src="assets/loading.gif" alt="">
     <p>Searching for game...</p>
 </div>
