--- a/Connect4/src/app/login/login.component.html
+++ b/Connect4/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container login-container">
     <p>Username</p>
-    <input type="text" />
+    <input [(ngModel)]="username" type="text" />
     <p>Password</p>
     <input type="text" />
     <br>
