--- a/Connect4/src/app/login/login.component.scss
+++ b/Connect4/src/app/login/login.component.scss
@@ -12,7 +12,7 @@
   input {
     margin: 3% 0% 10% 0;
     font-size: x-large;
-    padding: 3% 0;
+    padding: 3%;
     border-radius: 5px;
     width: 100%;
   }
