--- a/Connect4/src/app/home/home.component.scss
+++ b/Connect4/src/app/home/home.component.scss
@@ -1,6 +1,6 @@
 .home-container {
   display: flex;
-  width: 50%;
+  width: 60%;
   margin: auto;
 
   .profile-container {
@@ -33,7 +33,25 @@
 
   .search-game-container {
     width: 100%;
-    
+
+    .colors-container {
+      display: flex;
+
+      .color-container {
+        width: 100%;
+        padding-bottom: 1%;
+        
+        p {
+          font-size: x-large;
+          padding-bottom: 5%;
+        }
+      }
+
+      .color-container.left {
+        margin-right: 4%;
+      }
+    }
+
     select,
     button {
       font-size: x-large;
