--- a/Connect4/src/styles.scss
+++ b/Connect4/src/styles.scss
@@ -2,12 +2,16 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Patrick Hand', cursive;
+  font-family: "Patrick Hand", cursive;
 }
 
 html,
 body {
   height: 100%;
+}
+
+input, button, select {
+  border: 2px solid black;
 }
 
 .container {
@@ -18,18 +22,17 @@ body {
   box-shadow: 5px 5px black;
 }
 
-.button{
+.button {
   outline: none !important;
-  border: 2px solid black;
 }
 
-.button:hover{
+.button:hover {
   cursor: pointer;
   box-shadow: 3px 3px;
   transform: translate(-3px, -3px);
 }
 
-.button:active{
+.button:active {
   transform: translate(0px);
   box-shadow: none;
 }
