--- a/Connect4/src/app/login/login.component.scss
+++ b/Connect4/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 .login-container {
+  width: 25vw;
   text-align: center;
   padding: 2%;
-  width: fit-content;
   margin: auto;
 
   p {
@@ -17,12 +17,19 @@
     width: 100%;
   }
 
-  .link{
+  .link {
     color: blue;
     text-decoration: underline;
   }
 
-  .link:hover{
+  .link:hover {
     cursor: pointer;
+  }
+
+  div {
+    p {
+      color: red;
+      font-size: 1.5em;
+    }
   }
 }
